# sidus-ai-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
samples/: sample_twitter.py  samples_context.py
samples/deepseek/: README.md  main.py
samples/telegram/: README.md  main.py
samples/twitter/: README.md  main.py
sidusai/: __init__.py
sidusai/core/: agent.py  context.py  execute.py  graph.py  plugin.py  types.py  utils.py
sidusai/logger/: __init__.py
sidusai/plugins/deepseek/: __init__.py  components.py  skills.py
sidusai/plugins/openai/: __init__.py  components.py
sidusai/plugins/telegram/: __init__.py  components.py
sidusai/plugins/twitter/: __init__.py  components.py
