[project]
name = "sidusai"
version = "0.0.1.alpha"
# ...
dependencies = [
    "networkx==3.4.2",
]

[tool.setuptools]
packages = [
    # Core framework
    "sidusai", "sidusai.config", "sidusai.core", "sidusai.logger",
    # Default plugins
    "sidusai.plugins.deepseek", "sidusai.plugins.openai", "sidusai.plugins.transformer",
    "sidusai.plugins.ethereum", "sidusai.plugins.solana",
    "sidusai.plugins.telegram", "sidusai.plugins.twitter",
    "sidusai.plugins.web"
]
